--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <title>React App</title>
+    <title>Customer-To-Customer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
